--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,3 @@
 packages:
-  - git: "https://github.com/robertoooo/dbtvault.git" # git URL
-    revision: develop_unnested # tag or branch name
+  - package: dbt-labs/dbt_utils
+    version: [">=1.0.0", "<2.0.0"]
